<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_select_game">

    <fragment
        android:id="@+id/navigation_select_game"
        android:name="com.teippa.monijuomapeli.ui.select.SelectFragment"
        android:label="@string/title_select"
        tools:layout="@layout/fragment_select" />

    <fragment
        android:id="@+id/navigation_play_game"
        android:name="com.teippa.monijuomapeli.ui.play.PlayFragment"
        android:label="@string/title_play"
        tools:layout="@layout/fragment_play" />

    <fragment
        android:id="@+id/navigation_edit_game"
        android:name="com.teippa.monijuomapeli.ui.edit.EditFragment"
        android:label="@string/title_edit"
        tools:layout="@layout/fragment_edit" />

</navigation>
